Update Endpoint working
Fix Response and data handling and its corresponding id
this can better in future
